still more cleaning up of methods - should be done now!!

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -206,27 +206,26 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
         The NDDM (Eq. 1) and the RIM (Eqs. 2 and 3) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify \textit{realised} interactions which are then fed into the REM. We provide a working example of the STAN file used to specify and set this model to the case study below in the Supplementary Information, as well as a generalisable function in R which prepares the data and required indexing. From the model file, only the link function for $P_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($P_i$) but a different distribution may be more appropriate when using other proxies for lifetime reproductive success.   
 
         \paragraph{}
-        STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. \textcite{Ellison2004} also provides an accessible review of parameter estimate and the use of posterior distributions using a worked example on ant species richness data.
-
-        In order to allow a seamless integration between the NDDM and RIM and for both models to contribute to the likelihood, the joint model framework was written in the STAN programming language which uses Bayesian estimation methods. This approach is  returns parameter estimates as distributions rather than point estimates, allowing for easy inclusion of uncertainty in the analysis of results. Model parameters are sampled 1000 times from the 80\% posterior confidence intervals to construct parameter estimates. We then apply bootstrap sampling to each posterior interaction strength distribution to create 1000 samples of the community interaction matrix. 
+        STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty in the analysis of results, we therefore recommend bootstrap sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. \textcite{Ellison2004} also provides an accessible review of parameter estimate and the use of posterior distributions using a worked example on ant species richness data.
 
 
     \subsection{Case study}
 
       
-        We applied this framework to annual wildflower community dataset from Western Australia collected in 2016. This dataset contains observations of individual plant seed production from 22 different focal species, and the identity and abundance of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. We used the framework to quantify interactions between these 22 focal species and 53 neighbouring species, and derived per-capita interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Mayfield2017, Bimler2018} which required experimentally-measured species demographic rates. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods.
+        We applied this framework to annual wildflower community dataset from Western Australia collected in 2016. This dataset contains observations of individual plant seed production from 22 different focal species, and the identity and abundance of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. We used the framework to quantify interactions between these 22 focal species and 52 neighbouring species, and derived per-capita interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Mayfield2017, Bimler2018} which required experimentally-measured species demographic rates. Seed production was used as a measure of performance and modeled with a negative binomial distribution and a log link.
+        Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods.
 
 
 \section{Results}
 
 
-        Key aspects of the resulting interaction matrix is that these interactions can be competitive or facilitative, non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). Another versatile feature of this framework is that the shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (e.g. linear, exponential, rectangular hyperbolic) though it should be carefully verified before implementation. 
+    Key aspects of the resulting interaction matrix is that these interactions can be competitive or facilitative, non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). Another versatile feature of this framework is that the shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (e.g. linear, exponential, rectangular hyperbolic) though it should be carefully verified before implementation. 
 
 
 
 
 
-        The joint model was first applied to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where elements consisted of 22 focal species and up to 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution and a log link. We conducted a posterior predictive check comparing simulated performance data to observed values (Figure \ref{fig:ppcheck}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. The model returned estimates for all 1144 interactions between those 22 focal species and 52 neighbouring species, of which 60\% were observed (realised).  When accounting for focal species only, 86.4\% of interactions were observed and estimated by the NDDM. NDDM and RIM estimates matched well and followed similar distributions (S.I. Figure \ref{fig:adist}) as enforced by the framework. 
+        We conducted a posterior predictive check comparing simulated performance data to observed values (Figure \ref{fig:ppcheck}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. The model returned estimates for all 1144 interactions between those 22 focal species and 52 neighbouring species, of which 60\% were observed (realised).  When accounting for focal species only, 86.4\% of interactions were observed and estimated by the NDDM. NDDM and RIM estimates matched well and followed similar distributions (S.I. Figure \ref{fig:adist}) as enforced by the framework. 
     
 
 
