fixed equation in supps

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -446,18 +446,14 @@ I don't know where this goes - does it just repeat the methods? maybe reduce to 
         \end{equation}
 
         \begin{equation}
-        \beta_{ij} = g_{j} \alpha_{ij}
+        \beta_{ij} = \alpha_{ij}
         \end{equation}
 
         \begin{equation}
         \beta_{i0}  = ln(\eta_{i}) = ln(\frac{\lambda_{i} g_{i}}{\theta_{i}})
         \end{equation}
 
-        % \begin{equation}
-        % P_{i, t} = g_i F_{i, t} = ln(g_i F_{i, t})
-        % \end{equation}
-
-        % which one is it - and how does it match the code?!
+        % Daniel thinks this last equation is wrong but I don't think so?
 
         As we show here, the exact form of the rescaled interactions as well as intrinsic fitness can therefore vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality. Because intrinsic fitness is estimated by the model framework and not directly observed, we used the mean of the $\lambda_{i}$ posterior distribution returned by our model in our scaling of the interaction coefficients.
 
