--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -109,9 +109,9 @@ Data will be submitted to Dryad upon publication.
 
 
     \paragraph{} 
-    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which....... We specify a joint model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We further show the benefits of this ... approach by comparing a range of findings on our test natural system derived from a spatial - abundance association network [I don't like this!!], and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
+    We present a general framework to estimate interactions in highly diverse horizontal systems. We specify a joint model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. We present the model code in STAN, a Bayesian statistical language which is flexible to a high number of parameters, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this  dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate how to couch these results into established models of population dynamics. This step further widens the potential applications of this novel framework by accounting for other demographic processes affecting species or element performance, and thus sytem dynamics. We show the benefits of this approach by comparing a range of findings from our case study to the results derived from a spatial-abundance association network, a common alternative to estimating interactions in ecology. We suggest potential applications in species management and conservation that make use of the rich information provided by horizontal interaction networks as developed using our novel framework.
 
-
+    % Mayve remove the last sentence???
 
 \section{Methods}
 
